double page issue resolved

--- a/PF0F8F99A.opf/meta.yml
+++ b/PF0F8F99A.opf/meta.yml
@@ -8,3 +8,5 @@ source_metadata:
       title: དབུ་མ་རྩ་བའི་འགྲེལ་པ་ཤེས་རབ་སྒྲོན་མ།
       total_pages: 1605
       volume_number: 57
+vol2fn:
+  v057: v057.txt
