--- a/DD838A96E.opf/index.yml
+++ b/DD838A96E.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   dbdd81cc0cdd441dbdfb7d22e2f437b0:
     parts: {}
+    work_id: D3853
     span:
-    - vol: 57
+    - base: 2aa8
       start: 0
       end: 821229
-    work_id: D3853
